# localagent

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  ISSUE-001-test-results.md  ISSUE-002-lean-refactor.md  README.md  pyproject.toml
.claude/: instructions.md
.github/workflows/: ci.yml
docs/: adr-001-architecture.md  bash-runner-security.md  mcp-tools-guide.md
localagent/: __init__.py  broker.py  cache.py  cli.py  policies.py  prompt_engine.py  schemas.py
localagent/indexer/: __init__.py  core.py
localagent/subagents/: __init__.py  bash_runner.py  file_scanner.py  smart_searcher.py  summarizer.py
mcp_localagent/: __init__.py  server.py
tests/: conftest.py  test_bash_runner.py  test_broker.py  test_cache.py  test_cli.py  test_file_scanner.py  test_indexer.py  test_smart_searcher.py  test_summarizer.py
