[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localagent"
version = "0.1.0"
description = "LocalAgent Orchestration Prototype - Delegate mechanical tasks to local subagents via HTTP broker"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "LocalAgent Contributors" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=localagent --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires Ollama)",
]

[tool.coverage.run]
source = ["localagent"]
branch = true

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
